--- a/cse_16.html
+++ b/cse_16.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MY FIRST HTML</title>
 </head>
 <body>
-    jahfljkahdsjkahlsdjfhljkasdfhjaksdkfjhbghjghjghjgjhj
-    <h1>hellio jdskjfak</h1>
+
+    <h1>Name: BHAWESH RAUSHAN</h1>
+       <H1> Fater's Name: RAMESH RAUSHAN</H1>
+    
+    <h2>Branch: cse-16 , Section: 16</h2>
+    <p> Address: SHAKARPURA,BHAKRI BLOCK CHOCK BEGUSARI BIHAR</p>
 </body>
 </html>
