--- a/cse_16.html
+++ b/cse_16.html
@@ -6,7 +6,7 @@
 <body>
 
     <h1>Name: BHAWESH RAUSHAN</h1>
-       <H1> Fater's Name: RAMESH RAUSHAN</H1>
+       <H1> Fater's Name: RAMESH RAUSHAN mother name : ANITA DEVI</H1>
     
     <h2>Branch: cse-16 , Section: 16</h2>
     <p> Address: SHAKARPURA,BHAKRI BLOCK CHOCK BEGUSARI BIHAR</p>
