--- a/cse_16.html
+++ b/cse_16.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>MY FIRST HTML</title>
+    <title></title>
 </head>
 <body>
 
-    <h1>Name: BHAWESH RAUSHAN</h1>
+    <h1>N</h1>
        <H1> Fater's Name: RAMESH RAUSHAN mother name : ANITA DEVI</H1>
     
     <h2>Branch: cse-16 , Section: 16</h2>
