--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>25/09/25<title>
+        <title>25/09/25</title>
         </head>
         <body>
-            <h1 "style=color:blue;"> abes college</h1>
-            <p>i am student of abes. </P>
-            <br><br>
-            <ol>
+            <h1 style="color:blue;"> abes college</h1>
+            <p>i am student of abes. </p>
+                        <ol>
             <li>bhawesh</li>
             <li>bhavya</li>
             <li>ayush</li>
+            </ol>
             <dl>
                 <dt>html</dt>
                 <dd>hyper text markup language</dd>
